# analise-glp-brasil

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
data/processed/: glp-2023-01-processed.parquet  glp-2023-02-processed.parquet  glp-2024-01-processed.parquet  glp-2024-02-processed.parquet  glp-2025-01-processed.parquet  glp-2025-02-processed.parquet
data/results/: output_amplitude_preco_estado.csv  output_desvio_medio_historico.csv  output_hist_preco_bandeira.csv  output_preco_medio_estado.csv  output_preco_por_bandeira.csv  output_ranking_media_preco.csv  output_var_preco_nacional.csv
queries/: 01_setup.sql
queries/exports/: 01_preco_medio_estado.sql  02_amplitude_preco_estado.sql  03_preco_por_bandeira.sql  04_hist_preco_bandeira.sql  05_var_preco_nacional.sql  06_ranking_media_preco.sql  07_desvio_medio_historico.sql
queries/sandbox/: 02_descritivas.sql  03_distribuicoes.sql  04_temporais.sql  05_avancadas.sql
scripts/: exportar_resultados.ipynb  importar_dados.ipynb  sanity_check.ipynb  tratamento.ipynb
