[project]
name = "glp_analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Samuel Freitas",email = "samuelfms26@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
